Bug mainRecipeBody / overflow 🪳

--- a/sass/Components/_cards.scss
+++ b/sass/Components/_cards.scss
@@ -19,6 +19,11 @@
     margin-bottom: 0;
 }
 
+.allNeedCook {
+    width: 45%;
+    margin-right: 5px;
+}
+
 .allNeedCook ul {
    display: flex;
    list-style-type: none;
@@ -37,6 +42,20 @@
     justify-content:space-between;
     padding-top: 20px;
     padding-bottom: 20px;
+}
+
+.mainRecipeBody {
+    height: 186px;
+    overflow: hidden;
+//     display: -webkit-box;
+// -webkit-line-clamp: 4;
+// -webkit-box-orient: vertical;
+// text-overflow: ellipsis;
+}
+
+.recipeBody {
+    display: flex;
+    
 }
 
 .cookingTime {
@@ -58,5 +77,7 @@
 }
 
 .explanationRecipe {
+    width: 45%;
+    margin-left: 5px;
     font-size: 12px;
 }
