--- a/sass/main.css
+++ b/sass/main.css
@@ -174,6 +174,11 @@ button.collapsed {
   margin-bottom: 0;
 }
 
+.allNeedCook {
+  width: 45%;
+  margin-right: 5px;
+}
+
 .allNeedCook ul {
   display: flex;
   list-style-type: none;
@@ -194,6 +199,15 @@ button.collapsed {
   padding-bottom: 20px;
 }
 
+.mainRecipeBody {
+  height: 186px;
+  overflow: hidden;
+}
+
+.recipeBody {
+  display: flex;
+}
+
 .cookingTime {
   display: flex;
   align-items: center;
@@ -212,5 +226,7 @@ button.collapsed {
 }
 
 .explanationRecipe {
+  width: 45%;
+  margin-left: 5px;
   font-size: 12px;
 }/*# sourceMappingURL=main.css.map */
